--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#remove PWA service workers
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
